# StreamlitMockApp

./: main.py  pyproject.toml  requirements.txt
web/: annotator.py  view.py
web/pages/: attack.py  detail.py  home.py  tomato.py
web/utils/: charts.py  tennis.py
