[tool.poetry]
name = "streamlitmockapp"
version = "0.1.0"
description = ""
authors = ["hirotosuzuki <hiroto7665@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.3"
streamlit = "^0.89.0"
streamlit-player = "^0.1.5"
plotly = "^5.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
